fixed dropdown button style based on #2

--- a/index.html
+++ b/index.html
@@ -309,30 +309,27 @@ or Windows</li>
         <form action="https://secure.gempakbox.net/domainchecker.php" method="post">
         <input type="hidden" name="direct" value="true" />
         <input type="text" id="domainfield" name="domain" class="field1" value="enter your domain name here...." onfocus='javascript: if(this.value =="enter your domain name here....") this.value = ""' onblur='javascript: if(this.value =="") this.value = "enter your domain name here...."' />
-        <div class="dropdown1">
-          <select class="field2" name="ext" id="ext">
-                <option>.com</option>
-                <option>.net</option>
-                <option>.org</option>
-                <option>.biz</option>
-                <option>.tv</option>
-                <option>.info</option>
-                <option>.us</option>
-                <option>.cc</option>
-                <option>.name</option>
-                <option>.com.my</option>
-                <option>.net.my</option>
-                <option>.name.my</option>
-                <option>.org.my</option>
-                <option>.edu.my</option>
-                <option>.gov.my</option>
-                <option>.my</option>
-                <option>.fm</option>
-                <option>.coop</option>
-                <option>.ws</option>
-          </select>
-          <!--dropdown1--> 
-        </div>
+        <select class="dropdown" name="ext" id="ext">
+              <option>.com</option>
+              <option>.net</option>
+              <option>.org</option>
+              <option>.biz</option>
+              <option>.tv</option>
+              <option>.info</option>
+              <option>.us</option>
+              <option>.cc</option>
+              <option>.name</option>
+              <option>.com.my</option>
+              <option>.net.my</option>
+              <option>.name.my</option>
+              <option>.org.my</option>
+              <option>.edu.my</option>
+              <option>.gov.my</option>
+              <option>.my</option>
+              <option>.fm</option>
+              <option>.coop</option>
+              <option>.ws</option>
+        </select>
         <input name="button" type="submit"  class="field3" value="GO"/>
         </form>
         <!--domainlt--> 
@@ -454,30 +451,27 @@ or Windows</li>
         <form action="https://secure.gempakbox.net/domainchecker.php" method="post">
         <input type="hidden" name="direct" value="true" />
         <input type="text" id="domainfield" name="domain" class="field1" value="enter your domain name here...." onfocus='javascript: if(this.value =="enter your domain name here....") this.value = ""' onblur='javascript: if(this.value =="") this.value = "enter your domain name here...."' />
-        <div class="dropdown1">
-          <select class="field2" name="ext" id="ext">
-                <option>.com</option>
-                <option>.net</option>
-                <option>.org</option>
-                <option>.biz</option>
-                <option>.tv</option>
-                <option>.info</option>
-                <option>.us</option>
-                <option>.cc</option>
-                <option>.name</option>
-                <option>.com.my</option>
-                <option>.net.my</option>
-                <option>.name.my</option>
-                <option>.org.my</option>
-                <option>.edu.my</option>
-                <option>.gov.my</option>
-                <option>.my</option>
-                <option>.fm</option>
-                <option>.coop</option>
-                <option>.ws</option>
-          </select>
-          <!--dropdown1--> 
-        </div>
+        <select class="dropdown" name="ext" id="ext">
+              <option>.com</option>
+              <option>.net</option>
+              <option>.org</option>
+              <option>.biz</option>
+              <option>.tv</option>
+              <option>.info</option>
+              <option>.us</option>
+              <option>.cc</option>
+              <option>.name</option>
+              <option>.com.my</option>
+              <option>.net.my</option>
+              <option>.name.my</option>
+              <option>.org.my</option>
+              <option>.edu.my</option>
+              <option>.gov.my</option>
+              <option>.my</option>
+              <option>.fm</option>
+              <option>.coop</option>
+              <option>.ws</option>
+        </select>
         <input name="button" type="submit"  class="field3" value="GO"/>
         </form>
         <!--domainlt--> 
@@ -599,30 +593,27 @@ or Windows</li>
         <form action="https://secure.gempakbox.net/domainchecker.php" method="post">
         <input type="hidden" name="direct" value="true" />
         <input type="text" id="domainfield" name="domain" class="field1" value="enter your domain name here...." onfocus='javascript: if(this.value =="enter your domain name here....") this.value = ""' onblur='javascript: if(this.value =="") this.value = "enter your domain name here...."' />
-        <div class="dropdown1">
-          <select class="field2" name="ext" id="ext">
-                <option>.com</option>
-                <option>.net</option>
-                <option>.org</option>
-                <option>.biz</option>
-                <option>.tv</option>
-                <option>.info</option>
-                <option>.us</option>
-                <option>.cc</option>
-                <option>.name</option>
-                <option>.com.my</option>
-                <option>.net.my</option>
-                <option>.name.my</option>
-                <option>.org.my</option>
-                <option>.edu.my</option>
-                <option>.gov.my</option>
-                <option>.my</option>
-                <option>.fm</option>
-                <option>.coop</option>
-                <option>.ws</option>
-          </select>
-          <!--dropdown1--> 
-        </div>
+        <select class="dropdown" name="ext" id="ext">
+              <option>.com</option>
+              <option>.net</option>
+              <option>.org</option>
+              <option>.biz</option>
+              <option>.tv</option>
+              <option>.info</option>
+              <option>.us</option>
+              <option>.cc</option>
+              <option>.name</option>
+              <option>.com.my</option>
+              <option>.net.my</option>
+              <option>.name.my</option>
+              <option>.org.my</option>
+              <option>.edu.my</option>
+              <option>.gov.my</option>
+              <option>.my</option>
+              <option>.fm</option>
+              <option>.coop</option>
+              <option>.ws</option>
+        </select>
         <input name="button" type="submit"  class="field3" value="GO"/>
         </form>
         <!--domainlt--> 
@@ -744,30 +735,27 @@ or Windows</li>
         <form action="https://secure.gempakbox.net/domainchecker.php" method="post">
         <input type="hidden" name="direct" value="true" />
         <input type="text" id="domainfield" name="domain" class="field1" value="enter your domain name here...." onfocus='javascript: if(this.value =="enter your domain name here....") this.value = ""' onblur='javascript: if(this.value =="") this.value = "enter your domain name here...."' />
-        <div class="dropdown1">
-          <select name="ext" class="field2" id="ext">
-                <option>.com</option>
-                <option>.net</option>
-                <option>.org</option>
-                <option>.biz</option>
-                <option>.tv</option>
-                <option>.info</option>
-                <option>.us</option>
-                <option>.cc</option>
-                <option>.name</option>
-                <option>.com.my</option>
-                <option>.net.my</option>
-                <option>.name.my</option>
-                <option>.org.my</option>
-                <option>.edu.my</option>
-                <option>.gov.my</option>
-                <option>.my</option>
-                <option>.fm</option>
-                <option>.coop</option>
-                <option>.ws</option>
-          </select>
-          <!--dropdown1--> 
-        </div>
+        <select name="ext" class="dropdown" id="ext">
+              <option>.com</option>
+              <option>.net</option>
+              <option>.org</option>
+              <option>.biz</option>
+              <option>.tv</option>
+              <option>.info</option>
+              <option>.us</option>
+              <option>.cc</option>
+              <option>.name</option>
+              <option>.com.my</option>
+              <option>.net.my</option>
+              <option>.name.my</option>
+              <option>.org.my</option>
+              <option>.edu.my</option>
+              <option>.gov.my</option>
+              <option>.my</option>
+              <option>.fm</option>
+              <option>.coop</option>
+              <option>.ws</option>
+        </select>
         <input name="button" type="submit"  class="field3" value="GO"/>
         </form>
         <!--domainlt--> 
