add moderniser.js and fixed submit button arraying

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="js/dropdown.js"></script>
 <script type="text/javascript" src="js/jquery.cycle.all.js"></script>
 <script type="text/javascript" src="js/organictabs.jquery.js"></script>
+<script type="text/javascript" src="js/modernizr.js"></script>
 <script>
 $(function() {
 $("#tab_con1").organicTabs({
@@ -310,27 +311,27 @@ or Windows</li>
         <input type="hidden" name="direct" value="true" />
         <input type="text" id="domainfield" name="domain" class="field1" value="enter your domain name here...." onfocus='javascript: if(this.value =="enter your domain name here....") this.value = ""' onblur='javascript: if(this.value =="") this.value = "enter your domain name here...."' />
         <select class="dropdown" name="ext" id="ext">
-              <option>.com</option>
-              <option>.net</option>
-              <option>.org</option>
-              <option>.biz</option>
-              <option>.tv</option>
-              <option>.info</option>
-              <option>.us</option>
-              <option>.cc</option>
-              <option>.name</option>
-              <option>.com.my</option>
-              <option>.net.my</option>
-              <option>.name.my</option>
-              <option>.org.my</option>
-              <option>.edu.my</option>
-              <option>.gov.my</option>
-              <option>.my</option>
-              <option>.fm</option>
-              <option>.coop</option>
-              <option>.ws</option>
+          <option>.com</option>
+          <option>.net</option>
+          <option>.org</option>
+          <option>.biz</option>
+          <option>.tv</option>
+          <option>.info</option>
+          <option>.us</option>
+          <option>.cc</option>
+          <option>.name</option>
+          <option>.com.my</option>
+          <option>.net.my</option>
+          <option>.name.my</option>
+          <option>.org.my</option>
+          <option>.edu.my</option>
+          <option>.gov.my</option>
+          <option>.my</option>
+          <option>.fm</option>
+          <option>.coop</option>
+          <option>.ws</option>
         </select>
-        <input name="button" type="submit"  class="field3" value="GO"/>
+        <input name="button" type="submit" class="submit" value="GO"/>
         </form>
         <!--domainlt--> 
       </div>
@@ -472,7 +473,7 @@ or Windows</li>
               <option>.coop</option>
               <option>.ws</option>
         </select>
-        <input name="button" type="submit"  class="field3" value="GO"/>
+        <input name="button" type="submit" class="submit" value="GO"/>
         </form>
         <!--domainlt--> 
       </div>
@@ -614,7 +615,7 @@ or Windows</li>
               <option>.coop</option>
               <option>.ws</option>
         </select>
-        <input name="button" type="submit"  class="field3" value="GO"/>
+        <input name="button" type="submit"  class="submit" value="GO"/>
         </form>
         <!--domainlt--> 
       </div>
@@ -756,7 +757,7 @@ or Windows</li>
               <option>.coop</option>
               <option>.ws</option>
         </select>
-        <input name="button" type="submit"  class="field3" value="GO"/>
+        <input name="button" type="submit"  class="submit" value="GO"/>
         </form>
         <!--domainlt--> 
       </div>
