--- a/shared_hosting.html
+++ b/shared_hosting.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="js/dropdown.js"></script>
 <script src="js/jquery-ui.js"></script>
 <script src="js/TabbedPanels.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/modernizr.js"></script>
 <script>
 $(function() {
 $("#accordion1,#accordion2" ).accordion({ heightStyle: "content"});
