--- a/colocation.html
+++ b/colocation.html
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/dropdown.js"></script>
 <script src="js/TabbedPanels.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/modernizr.js"></script>
 <script>
 $(document).ready(function () {
 		$('#hide').click(
