--- a/dedicated.html
+++ b/dedicated.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="js/organictabs.jquery.js"></script>
 <script src="js/TabbedPanels.js" type="text/javascript"></script>
 <script src="js/CollapsiblePanel.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/modernizr.js"></script>
 <script>
 $(function() {
 $("#tab_con1,#tab_con2,#tab_con3").organicTabs({
