--- a/domain_ssl.html
+++ b/domain_ssl.html
@@ -8,6 +8,7 @@
 <link href="css/menu.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script src="js/TabbedPanels.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/modernizr.js"></script>
 <script>
 $(document).ready(function () {
 		$('#hide').click(
