--- a/sitemap.html
+++ b/sitemap.html
@@ -7,6 +7,7 @@
 <link href="css/menu.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/dropdown.js"></script>
+<script type="text/javascript" src="js/modernizr.js"></script>
 <script>
 $(document).ready(function () {
 		$('#hide').click(
