--- a/vps.html
+++ b/vps.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="js/organictabs.jquery.js"></script>
 <script src="js/TabbedPanels.js" type="text/javascript"></script>
 <script type="text/javascript" src="js/vps_slider.js"></script>
+<script type="text/javascript" src="js/modernizr.js"></script>
 <script>
 $(function() {
 $("#tab_con1").organicTabs({
