Fixed Domain Box!

--- a/domain_ssl.html
+++ b/domain_ssl.html
@@ -98,8 +98,8 @@ $(document).ready(function () {
         <h3>We provides more than <span>80% different</span> domain suffixes with no hidden costs.</h3>
         <div class="domain_box">
           <div class="whitebox">
-            <h4>FIND YOUR<br />
-              DOMAIN NAME NOW</h4>
+            <h4>Choose your<br />
+              domain today!</h4>
             <form action="https://secure.gempakbox.net/domainchecker.php" method="post">
               <input type="hidden" name="direct" value="true" />
               <input type="text" name="domain" size="20" class="field1" placeholder="Enter your desired domain name here" />
