--- a/index.html
+++ b/index.html
@@ -303,13 +303,13 @@ or Windows</li>
     </div>
     <div class="domainbox">
       <div class="domainlt">
-        <div class="domaintxt">FIND YOUR<br />
-          DOMAIN NAME NOW 
+        <div class="domaintxt">Choose your <br />
+          domain today! 
           <!--domaintxt--> 
         </div>
         <form action="https://secure.gempakbox.net/domainchecker.php" method="post">
         <input type="hidden" name="direct" value="true" />
-        <input type="text" id="domainfield" name="domain" class="field1" value="enter your domain name here...." onfocus='javascript: if(this.value =="enter your domain name here....") this.value = ""' onblur='javascript: if(this.value =="") this.value = "enter your domain name here...."' />
+        <input type="text" id="domainfield" name="domain" class="field1" value="Enter your desired domain name here" onfocus='javascript: if(this.value =="Enter your desired domain name here") this.value = ""' onblur='javascript: if(this.value =="") this.value = "Enter your desired domain name here"' />
         <select class="dropdown" name="ext" id="ext">
           <option>.com</option>
           <option>.net</option>
