add FAQ Shared Hosting

--- a/shared_hosting.html
+++ b/shared_hosting.html
@@ -400,35 +400,78 @@ $(document).ready(function () {
     </div>
     <div class="TabbedPanelsContent">
       <div class="accordianbox" id="accordion1">
-        <h4>What is a Dedicated Server?</h4>
+        <h4>What is a Shared Hosting?</h4>
         <div class="txtinner">
-          <p>A Dedicated Server is a system which the client leases and is not shared with anyone. All server resources are completed dedicated for the clients requirements and is not shared. A Dedicated Server gives you complete access to manage and administer all tasks independently, configure the server and install software/applications as you want.</p>
+          <p>A shared web hosting service is a web hosting service where many websites reside on one web server connected to the Internet. Each site "sits" on its own partition, or section/place on the server, to keep it separate from other sites. This is generally the most economical option for hosting, as many people share the overall cost of server maintenance.</p>
           <!--txtinner--> 
         </div>
-        <h4>What are the benefits of Dedicated Server?</h4>
+        <h4>Who should choose Shared Hosting plans?</h4>
         <div class="txtinner">
-          <p>A Dedicated Server is a system which the client leases and is not shared with anyone. All server resources are completed dedicated for the clients requirements and is not shared. A Dedicated Server gives you complete access to manage and administer all tasks independently, configure the server and install software/applications as you want.</p>
+          <p>If you are looking forward to host personal blog or small forum, a wordpress or small e-commerce website, you can definitely consider our Shared Hosting Plan.</p>
           <!--txtinner--> 
         </div>
-        <h4>Do you provide fully managed Dedicated Servers?</h4>
+        <h4>Should I choose Linux or Windows Hosting platform?</h4>
         <div class="txtinner">
-          <p>A Dedicated Server is a system which the client leases and is not shared with anyone. All server resources are completed dedicated for the clients requirements and is not shared. A Dedicated Server gives you complete access to manage and administer all tasks independently, configure the server and install software/applications as you want.</p>
+          <p>Linux is a very reliable operating system that supports a wide range of applications and programming languages such as PHP, MySQL, Ruby on Rails, and SSH.<br />
+However, Windows is an excellent hosting platform option for websites built using Microsoft technologies such as MS Access, ASP, ASP.NET, MS SQL 2005/2008 and many more.<br />
+If you are new to web hosting and would just like to host your web site and emails, we recommend Linux hosting platform.</p>
           <!--txtinner--> 
         </div>
-        <h4>Do you take backup of Dedicated Server?</h4>
+        <h4>Is Shopping Cart compatible on Shared Hosting Plans?</h4>
         <div class="txtinner">
-          <p>A Dedicated Server is a system which the client leases and is not shared with anyone. All server resources are completed dedicated for the clients requirements and is not shared. A Dedicated Server gives you complete access to manage and administer all tasks independently, configure the server and install software/applications as you want.</p>
+          <p>Yes, all major shopping carts such as Magento, Oscommerce, Cubecart, Zencart, PrestaShop. etc are compatible on our Shared Hosting Plans.</p>
           <!--txtinner--> 
         </div>
-        <h4>What is the network uptime you provide on Dedicated Server?</h4>
+        <h4>Can GB Network transfer my complete data from previous host?</h4>
         <div class="txtinner">
-          <p>A Dedicated Server is a system which the client leases and is not shared with anyone. All server resources are completed dedicated for the clients requirements and is not shared. A Dedicated Server gives you complete access to manage and administer all tasks independently, configure the server and install software/applications as you want.</p>
+          <p>Yes, we can transfer your data including files, database and images from previous host to our servers, provided you have cPanel or Plesk control panel or FTP access with previous hosting provider. We will need the login credentials of your previous host in order to transfer your data.</p>
           <!--txtinner--> 
         </div>
         <h4>What is the process of data migration from previous host?</h4>
         <div class="txtinner">
-          <p>A Dedicated Server is a system which the client leases and is not shared with anyone. All server resources are completed dedicated for the clients requirements and is not shared. A Dedicated Server gives you complete access to manage and administer all tasks independently, configure the server and install software/applications as you want.</p>
+          <p>Kindly fill in the data migration form available on the following link: <a href="migration.html">Migration</a></p>
           <!--txtinner--> 
+        </div>
+        <h4>Can I point multiple domains to the same website?</h4>
+        <div class="txtinner">
+          <p>Yes, you can point multiple domains to the same website on all our hosting plans.</p>
+          <!--txtinner-->
+        </div>
+        <h4>Can I upgrade/downgrade my web hosting plan in future?</h4>
+        <div class="txtinner">
+          <p>Yes, you can upgrade/downgrade your web hosting plan at any point of time.</p>
+          <!--txtinner-->
+        </div>
+        <h4>Will I notice any downtime during upgrade or downgrade procedure?</h4>
+        <div class="txtinner">
+          <p>Absolutely not, upgrade/downgrade procedure is seamless and you won’t experience any downtime or outage.</p>
+          <!--txtinner--> 
+        </div>
+        <h4>Do you support IMAP?</h4>
+        <div class="txtinner">
+          <p>Yes, IMAP is supported on all our hosting plans.</p>
+          <!--txtinner-->                                     
+        </div>
+        <h4>Do you take daily backups of my website?</h4>
+        <div class="txtinner">
+          <p>Yes, we do take daily off-line backups of complete server. However, GB Network strongly advises the client to regularly perform a backup of their web content.</p>
+          <!--txtinner-->                                     
+        </div>
+        <h4>What are the restrictions on Shared Hosting?</h4>
+        <div class="txtinner">
+          <p>GB Network does not allow child pornography, unsolicited e-mail, bulk emailing, spam, Torrents, IRC Bots, Proxy Scripts / Anonymizers, Pirated Software.etc. Any account found violating these restrictions is subject to termination or suspension, depending on the account with no money back refund.</p>
+          <!--txtinner-->                                     
+        </div>
+        <h4>What is the benefit of Dedicated IP?</h4>
+        <div class="txtinner">
+          <p>Dedicated IP is very good for you if you want the visitors of your site to download many FTP files from
+your website and also if you want to have some financial transactions on your web site like accepting credit cards. Also, if you are hosting multiple websites on the same IP then you should have a Dedicated IP.</p>
+          <!--txtinner-->                                     
+        </div>
+        <h4>What methods of payment do you accept?</h4>
+        <div class="txtinner">
+          <p>We accept all major credit cards which can be paid via Paypal option while trying to signup and Bank transfers.</p>
+          <!--txtinner-->                                     
         </div>
         <!--accordianbox--> 
       </div>
