--- a/shared_hosting.html
+++ b/shared_hosting.html
@@ -1105,10 +1105,10 @@ your website and also if you want to have some financial transactions on your we
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
       <tr>
         <th width="401px">&nbsp;</th>
-        <th>Essential</th>
-        <th>Premium</th>
-        <th>Business</th>
-        <th>Pro</th>
+        <th>White</th>
+        <th>Silver</th>
+        <th>Bronze</th>
+        <th>Gold</th>
       </tr>
     </table>
     <div class="clear"></div>
@@ -1117,45 +1117,45 @@ your website and also if you want to have some financial transactions on your we
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td width="340px">Monthly</td>
-          <td width="140px">£ 2.99</td>
-          <td width="140px">£ 4.59</td>
-          <td width="140px">£ 6.99</td>
-          <td width="140px">£ 12.99</td>
+          <td width="140px">-</td>
+          <td width="140px">-</td>
+          <td width="140px">-</td>
+          <td width="140px">-</td>
         </tr>
         <tr>
           <td>Quarterly</td>
-          <td>£ 8.97</td>
-          <td>£ 13.77</td>
-          <td>£ 20.97</td>
-          <td>£ 38.97</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
         </tr>
         <tr>
           <td>Semi-annually</td>
-          <td>£ 17.94</td>
-          <td>£ 27.54</td>
-          <td>£ 41.94</td>
-          <td>£ 77.94</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
         </tr>
         <tr>
-          <td>Annually <span class="red">(Pay annually and get 10% Off)</span></td>
-          <td>£ 32.29</td>
-          <td>£ 49.57</td>
-          <td>£ 75.49</td>
-          <td>£ 140.29</td>
+          <td>Annually</td>
+          <td>RM 50.00</td>
+          <td>RM 80.00</td>
+          <td>RM 180.00</td>
+          <td>RM 230.00</td>
         </tr>
         <tr>
-          <td>Biennially <span class="red">(Pay biennially and get 20% Off)</span></td>
-          <td>£ 57.40</td>
-          <td>£ 88.12</td>
-          <td>£ 134.20</td>
-          <td>£ 249.40</td>
+          <td>Biennially <span class="red">(Pay biennially and get 10% Off)</span></td>
+          <td>RM 90.00</td>
+          <td>RM 144.00</td>
+          <td>RM 324.00</td>
+          <td>RM 414.40</td>
         </tr>
         <tr>
-          <td>Triennially <span class="red">(Pay triennially and get 30% Off)</span></td>
-          <td>£ 75.34</td>
-          <td>£ 115.66</td>
-          <td>£ 176.14</td>
-          <td>£ 327.34</td>
+          <td>Triennially <span class="red">(Pay triennially and get 20% Off)</span></td>
+          <td>RM 200.00</td>
+          <td>RM 320.00</td>
+          <td>RM 720.00</td>
+          <td>RM 920.00</td>
         </tr>
       </table>
     </div>
@@ -1636,10 +1636,10 @@ your website and also if you want to have some financial transactions on your we
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
       <tr>
         <th width="401px">&nbsp;</th>
-        <th>Linux White</th>
-        <th>Linux Silver</th>
-        <th>Linux Bronze</th>
-        <th>Linux Gold</th>
+        <th>White</th>
+        <th>Silver</th>
+        <th>Bronze</th>
+        <th>Gold</th>
       </tr>
     </table>
     <div class="clear"></div>
@@ -1648,45 +1648,45 @@ your website and also if you want to have some financial transactions on your we
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td width="340px">Monthly</td>
-          <td width="140px">£ 2.99</td>
-          <td width="140px">£ 4.59</td>
-          <td width="140px">£ 6.99</td>
-          <td width="140px">£ 12.99</td>
+          <td width="140px">-</td>
+          <td width="140px">-</td>
+          <td width="140px">-</td>
+          <td width="140px">-</td>
         </tr>
         <tr>
           <td>Quarterly</td>
-          <td>£ 8.97</td>
-          <td>£ 13.77</td>
-          <td>£ 20.97</td>
-          <td>£ 38.97</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
         </tr>
         <tr>
           <td>Semi-annually</td>
-          <td>£ 17.94</td>
-          <td>£ 27.54</td>
-          <td>£ 41.94</td>
-          <td>£ 77.94</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
         </tr>
         <tr>
-          <td>Annually <span class="red">(Pay annually and get 10% Off)</span></td>
-          <td>£ 32.29</td>
-          <td>£ 49.57</td>
-          <td>£ 75.49</td>
-          <td>£ 140.29</td>
+          <td>Annually</td>
+          <td>RM 50.00</td>
+          <td>RM 80.00</td>
+          <td>RM 180.00</td>
+          <td>RM 230.00</td>
         </tr>
         <tr>
-          <td>Biennially <span class="red">(Pay biennially and get 20% Off)</span></td>
-          <td>£ 57.40</td>
-          <td>£ 88.12</td>
-          <td>£ 134.20</td>
-          <td>£ 249.40</td>
+          <td>Biennially <span class="red">(Pay biennially and get 10% Off)</span></td>
+          <td>RM 90.00</td>
+          <td>RM 144.00</td>
+          <td>RM 324.00</td>
+          <td>RM 414.40</td>
         </tr>
         <tr>
-          <td>Triennially <span class="red">(Pay triennially and get 30% Off)</span></td>
-          <td>£ 75.34</td>
-          <td>£ 115.66</td>
-          <td>£ 176.14</td>
-          <td>£ 327.34</td>
+          <td>Triennially <span class="red">(Pay triennially and get 20% Off)</span></td>
+          <td>RM 200.00</td>
+          <td>RM 320.00</td>
+          <td>RM 720.00</td>
+          <td>RM 920.00</td>
         </tr>
       </table>
     </div>
@@ -2167,10 +2167,10 @@ your website and also if you want to have some financial transactions on your we
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
       <tr>
         <th width="401px">&nbsp;</th>
-        <th>Linux White</th>
-        <th>Linux Silver</th>
-        <th>Linux Bronze</th>
-        <th>Linux Gold</th>
+        <th>White</th>
+        <th>Silver</th>
+        <th>Bronze</th>
+        <th>Gold</th>
       </tr>
     </table>
     <div class="clear"></div>
@@ -2179,45 +2179,45 @@ your website and also if you want to have some financial transactions on your we
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <td width="340px">Monthly</td>
-          <td width="140px">£ 2.99</td>
-          <td width="140px">£ 4.59</td>
-          <td width="140px">£ 6.99</td>
-          <td width="140px">£ 12.99</td>
+          <td width="140px">-</td>
+          <td width="140px">-</td>
+          <td width="140px">-</td>
+          <td width="140px">-</td>
         </tr>
         <tr>
           <td>Quarterly</td>
-          <td>£ 8.97</td>
-          <td>£ 13.77</td>
-          <td>£ 20.97</td>
-          <td>£ 38.97</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
         </tr>
         <tr>
           <td>Semi-annually</td>
-          <td>£ 17.94</td>
-          <td>£ 27.54</td>
-          <td>£ 41.94</td>
-          <td>£ 77.94</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
         </tr>
         <tr>
-          <td>Annually <span class="red">(Pay annually and get 10% Off)</span></td>
-          <td>£ 32.29</td>
-          <td>£ 49.57</td>
-          <td>£ 75.49</td>
-          <td>£ 140.29</td>
+          <td>Annually</td>
+          <td>RM 50.00</td>
+          <td>RM 80.00</td>
+          <td>RM 180.00</td>
+          <td>RM 230.00</td>
         </tr>
         <tr>
-          <td>Biennially <span class="red">(Pay biennially and get 20% Off)</span></td>
-          <td>£ 57.40</td>
-          <td>£ 88.12</td>
-          <td>£ 134.20</td>
-          <td>£ 249.40</td>
+          <td>Biennially <span class="red">(Pay biennially and get 10% Off)</span></td>
+          <td>RM 90.00</td>
+          <td>RM 144.00</td>
+          <td>RM 324.00</td>
+          <td>RM 414.40</td>
         </tr>
         <tr>
-          <td>Triennially <span class="red">(Pay triennially and get 30% Off)</span></td>
-          <td>£ 75.34</td>
-          <td>£ 115.66</td>
-          <td>£ 176.14</td>
-          <td>£ 327.34</td>
+          <td>Triennially <span class="red">(Pay triennially and get 20% Off)</span></td>
+          <td>RM 200.00</td>
+          <td>RM 320.00</td>
+          <td>RM 720.00</td>
+          <td>RM 920.00</td>
         </tr>
       </table>
     </div>
