update feature windows box

--- a/shared_hosting.html
+++ b/shared_hosting.html
@@ -2756,14 +2756,22 @@ your website and also if you want to have some financial transactions on your we
     <div>
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td width="340px">cPanel</td>
+        <tr>
+          <td width="340px">Microsoft Windows 2008</td>
           <td><img alt="YES" src="images/tickmarkbig.png"></td>
           <td><img alt="YES" src="images/tickmarkbig.png"></td>
           <td><img alt="YES" src="images/tickmarkbig.png"></td>
           <td><img alt="YES" src="images/tickmarkbig.png"></td>
         </tr>
         <tr>
-          <td>Softaculous</td>
+          <td>Parallels Plesk</td>
+          <td><img alt="YES" src="images/tickmarkbig.png"></td>
+          <td><img alt="YES" src="images/tickmarkbig.png"></td>
+          <td><img alt="YES" src="images/tickmarkbig.png"></td>
+          <td><img alt="YES" src="images/tickmarkbig.png"></td>
+        </tr>
+        <tr>
+          <td>Parallels Sitebuilder</td>
           <td><img alt="YES" src="images/tickmarkbig.png"></td>
           <td><img alt="YES" src="images/tickmarkbig.png"></td>
           <td><img alt="YES" src="images/tickmarkbig.png"></td>
@@ -2790,47 +2798,12 @@ your website and also if you want to have some financial transactions on your we
           <td><img alt="YES" src="images/tickmarkbig.png"></td>
           <td><img alt="YES" src="images/tickmarkbig.png"></td>
         </tr>
-        <tr>
-          <td>RVSkin</td>
-          <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          <td><img alt="YES" src="images/tickmarkbig.png"></td>
-        </tr>
-        <tr>
-          <td>RVSiteBuilder</td>
-          <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          <td><img alt="YES" src="images/tickmarkbig.png"></td>
-        </tr>
-        <tr>
-          <td>Magento Compatible</td>
-          <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          <td><img alt="YES" src="images/tickmarkbig.png"></td>
-        </tr>
       </table>
     </div>
     <h4>Domain Support</h4>
     <div>
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tbody>
-          <tr>
-            <td width="340px">Addon Domains</td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>
-          <tr>
-            <td>Parked Domains</td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>
           <tr>
             <td>Subdomains</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
@@ -2930,28 +2903,35 @@ your website and also if you want to have some financial transactions on your we
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tbody>
           <tr>
-            <td width="340px">MySQL (5.0.24)</td>
+            <td width="340px">MS-SQL 2005</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
           </tr>
           <tr>
-            <td>PhpMyadmin</td>
+            <td>MS-ACCESS</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
           </tr>
           <tr>
-            <td>PGSQL</td>
+            <td>ODBC</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
           </tr>
           <tr>
-            <td>PgpMyadmin</td>
+            <td>MySQL (5.x)</td>
+            <td><img alt="YES" src="images/tickmarkbig.png"></td>
+            <td><img alt="YES" src="images/tickmarkbig.png"></td>
+            <td><img alt="YES" src="images/tickmarkbig.png"></td>
+            <td><img alt="YES" src="images/tickmarkbig.png"></td>
+          </tr>          
+          <tr>
+            <td>phpMyAdmin</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
@@ -2965,7 +2945,14 @@ your website and also if you want to have some financial transactions on your we
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tbody>
           <tr>
-            <td width="340px">PHP 5</td>
+            <td width="340px">ASP.NET 3.5, 3.0.1, 2.0 &amp; 1.1</td>
+            <td><img alt="YES" src="images/tickmarkbig.png"></td>
+            <td><img alt="YES" src="images/tickmarkbig.png"></td>
+            <td><img alt="YES" src="images/tickmarkbig.png"></td>
+            <td><img alt="YES" src="images/tickmarkbig.png"></td>
+          </tr>
+          <tr>
+            <td>PHP 4.4.4 &amp; PHP 5</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
@@ -2986,21 +2973,7 @@ your website and also if you want to have some financial transactions on your we
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
           </tr>
           <tr>
-            <td>Softaculous (3.1.1)</td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>
-          <tr>
             <td>Zend Optimizer (3.0.1)</td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>
-          <tr>
-            <td>Ruby on Rails</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
@@ -3091,49 +3064,7 @@ your website and also if you want to have some financial transactions on your we
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tbody>
           <tr>
-            <td width="340px">Webalizer Stats</td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>
-          <tr>
             <td>AwStats</td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>
-          <tr>
-            <td>Analog Stats</td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>
-          <tr>
-            <td>Latest Visitors</td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>
-          <tr>
-            <td>Monthly Bandwidth Stats and Graphs</td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>
-          <tr>
-            <td>Raw Access Log</td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>
-          <tr>
-            <td>Error Log</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
@@ -3147,14 +3078,7 @@ your website and also if you want to have some financial transactions on your we
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tbody>
           <tr>
-            <td width="340px">Full htaccess Support</td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-            <td><img alt="YES" src="images/tickmarkbig.png"></td>
-          </tr>
-          <tr>
-            <td>Cron Jobs</td>
+            <td width="340px">Scheduled Tasks</td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
             <td><img alt="YES" src="images/tickmarkbig.png"></td>
