adjust vps price and cart link

--- a/vps.html
+++ b/vps.html
@@ -95,7 +95,7 @@ $(document).ready(function () {
 </div>
 <div class="subanner vps_banner">
   <h1>Virtual Private Servers</h1>
-  <h2>GempakBox Has been Setting the Standard for Reliability and Performance</h2>
+  <h2>GB Network Has been Setting the Standard for Reliability and Performance</h2>
   <!--subanner--> 
 </div>
 <div id="TabbedPanels1" class="TabbedPanels">
